--- a/cut.ipynb
+++ b/cut.ipynb
@@ -208,6 +208,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('termdocmatrix/matrix.txt', 'w')\n",
+    "doc_matrix_str = str()\n",
+    "for row in doc_matrix:\n",
+    "    doc_matrix_str = doc_matrix_str + ','.join(map(str,row))+'\\n'\n",
+    "f.write(doc_matrix_str)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
