--- a/cut.ipynb
+++ b/cut.ipynb
@@ -173,14 +173,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_word_counts = dict()\n",
+    "for summary in article_summaries:\n",
+    "    stats = summary['stats']\n",
+    "    for word, count in stats.items():\n",
+    "        if not (word in all_word_counts):\n",
+    "            all_word_counts[word] = count\n",
+    "        else:\n",
+    "            all_word_counts[word] = all_word_counts[word] + count\n",
+    "\n",
+    "all_word_counts_vector = list()\n",
+    "for word in all_words_vector:\n",
+    "    all_word_counts_vector.append(all_word_counts[word])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "index_to_word = pd.DataFrame({\n",
     "    'index': np.array(range(0, len(all_words))),\n",
-    "    'word': all_words_vector\n",
-    "})"
+    "    'word': all_words_vector,\n",
+    "    'count': np.array(all_word_counts_vector)\n",
+    "})\n",
+    "index_to_word.to_csv('termdocmatrix/index_to_word.csv', index=False)\n",
+    "index_to_word_sorted = index_to_word.sort_values('count', ascending=False)\n",
+    "index_to_word_sorted.to_csv('termdocmatrix/index_to_word_sorted.csv', index=False)"
    ]
   },
   {
@@ -192,24 +216,7 @@
     "index_to_article = pd.DataFrame({\n",
     "    'index': np.array(range(0, len(article_names))),\n",
     "    'article': article_names\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index_to_word.to_csv('termdocmatrix/index_to_word.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "})\n",
     "index_to_article.to_csv('termdocmatrix/index_to_article.csv', index=False)"
    ]
   },
