--- a/analysis_py.ipynb
+++ b/analysis_py.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
-    "import time"
+    "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.cluster import AgglomerativeClustering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +33,6 @@
     "for i in range(0, words.shape[0]):\n",
     "    word = words.iloc[i, 1]\n",
     "    if not (type(word) is str):\n",
-    "#         print('At index: ' + str(i))\n",
-    "#         print('Non str: ' + str(word))\n",
     "        puncs_indexes.append(i)\n",
     "        continue\n",
     "    \n",
@@ -46,28 +46,28 @@
     "        '\\u0080-\\u00FF' +\n",
     "        '\\uFF00-\\uFF0F' +\n",
     "        '\\u3000-\\u303F' +\n",
+    "        '\\u0030-\\u0039' +\n",
+    "        '\\u0040-\\u007F' +\n",
     "        ']',\n",
     "        words.iloc[i, 1]\n",
     "    )\n",
     "        \n",
     "    if not (result is None):\n",
-    "#         print('At index: ' + str(i))\n",
-    "#         print('Result: ' + str(result))\n",
     "        puncs_indexes.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "271"
+       "5202"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,25 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "punctuation_words = words.iloc[puncs_indexes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "punctuation_words.to_csv(path_or_buf='termdocmatrix/punc_words.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,20 +100,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pure_words.to_csv(path_or_buf='termdocmatrix/pure_words.csv', index=False)"
+    "double_word_indexes = list()\n",
+    "for i in range(0, pure_words.shape[0]):\n",
+    "    if len(pure_words.iloc[i, 1]) >= 2:\n",
+    "        double_word_indexes.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = pure_words.iloc[double_word_indexes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words.to_csv(path_or_buf='termdocmatrix/words.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double_words = double_words.sort_values(\n",
+    "    by = 'count', \n",
+    "    ascending=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc_matrix_full = np.loadtxt('termdocmatrix/matrix.txt', delimiter=',')\n",
+    "doc_matrix = doc_matrix_full[:, double_words.iloc[:, 0]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(73, 6012)"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pure_words_sorted = pure_words.sort_values('count', ascending=False)"
+    "doc_matrix.shape"
    ]
   },
   {
@@ -140,223 +176,190 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pure_words_sorted.to_csv(path_or_buf='termdocmatrix/pure_words_sorted.csv', index=False)"
+    "normalization_factor = np.sum(doc_matrix, axis = 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = pd.DataFrame({\n",
-    "    'c1': [1,2,3,4,5,6]\n",
-    "})"
+    "idf = np.log(doc_matrix.shape[0]/np.count_nonzero(doc_matrix, axis = 0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pure_words' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-ff4c346557e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpure_words\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'pure_words' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pure_words"
+    "tf_idf = doc_matrix * idf / normalization_factor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>c1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   c1\n",
-       "0   1\n",
-       "1   2\n",
-       "2   3\n",
-       "3   4\n",
-       "4   5\n",
-       "5   6"
+       "((73, 20), (20,), (20, 6012))"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a"
+    "u, s, vh = np.linalg.svd(tf_idf, full_matrices=False)\n",
+    "u.shape, s.shape, vh.shape\n",
+    "\n",
+    "truncate_factor = 20\n",
+    "u = u[:, 0:truncate_factor]\n",
+    "s = s[range(truncate_factor)]\n",
+    "vh = vh[0:truncate_factor, :]\n",
+    "u.shape, s.shape, vh.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 307,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25612.44969053936"
+      ]
+     },
+     "execution_count": 307,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "term_coords = pd.read_csv('termdocmatrix/term_coords.csv')"
+    "np.sum((tf_idf - np.matmul(np.matmul(u, np.diag(s)), vh))**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
-    "term_coords_np = np.random.rand(10,4)\n",
-    "\n",
-    "v1 = term_coords_np[:, 0]\n",
-    "v2 = term_coords_np[:, 1]\n",
-    "v3 = term_coords_np[:, 2]\n",
-    "v4 = term_coords_np[:, 3]"
+    "term_coords = np.matmul(np.diag(s), vh).T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v1_mat = np.tile(\n",
-    "    A = v1,\n",
-    "    reps = (v1.shape[0], 1)\n",
+    "terms = pd.read_csv('termdocmatrix/index_to_word.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_clusters = 1000\n",
+    "\n",
+    "clusterer_trainer_average = AgglomerativeClustering(\n",
+    "    n_clusters = n_clusters,\n",
+    "    affinity = 'cosine',\n",
+    "    linkage = 'average'\n",
     ")\n",
     "\n",
-    "v2_mat = np.tile(\n",
-    "    A = v2,\n",
-    "    reps = (v1.shape[0], 1)\n",
+    "clusterer_trainer_single = AgglomerativeClustering(\n",
+    "    n_clusters = n_clusters,\n",
+    "    affinity = 'cosine',\n",
+    "    linkage = 'single'\n",
     ")\n",
     "\n",
-    "v3_mat = np.tile(\n",
-    "    A = v3,\n",
-    "    reps = (v1.shape[0], 1)\n",
-    ")\n",
+    "clusterer_trainer_complete = AgglomerativeClustering(\n",
+    "    n_clusters = n_clusters,\n",
+    "    affinity = 'cosine',\n",
+    "    linkage = 'complete'\n",
+    ") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_average = clusterer_trainer_average.fit(term_coords)\n",
+    "model_single = clusterer_trainer_single.fit(term_coords)\n",
+    "model_complete = clusterer_trainer_complete.fit(term_coords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def words_cluster(n, model):\n",
+    "    return terms.iloc[(double_words.iloc[:, 0])[model.labels_==n], :].iloc[:,1].to_numpy()\n",
     "\n",
-    "v4_mat = np.tile(\n",
-    "    A = v4,\n",
-    "    reps = (v1.shape[0], 1)\n",
+    "def output_to_file(filename = None, model = None):\n",
+    "    output_str = str()\n",
+    "    for i in range(0, n_clusters):\n",
+    "        output_str = output_str + 'n_cluster: ' + str(i) + '\\n\\n'\n",
+    "\n",
+    "        words_in_this_cluster = words_cluster(i, model)\n",
+    "        for word in words_in_this_cluster:\n",
+    "            output_str = output_str + word + ', '\n",
+    "\n",
+    "        output_str = output_str + '\\n\\n'\n",
+    "\n",
+    "\n",
+    "    f = open(filename, 'w')\n",
+    "    f.write(output_str)\n",
+    "    f.close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_to_file(\n",
+    "    filename = 'clusters_average.txt',\n",
+    "    model = model_average\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 320,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0035429000854492188\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s = time.time()\n",
-    "my_cos_1 = np.abs(v1_mat * v1_mat.T + v2_mat * v2_mat.T + v3_mat * v3_mat.T + v4_mat * v4_mat.T)/(\n",
-    "    np.sqrt(v1_mat * v1_mat + v2_mat * v2_mat + v3_mat * v3_mat + v4_mat * v4_mat)*np.sqrt(\n",
-    "        v1_mat.T * v1_mat.T + v2_mat.T * v2_mat.T + v3_mat.T * v3_mat.T + v4_mat.T * v4_mat.T\n",
-    "    )\n",
-    ")\n",
-    "e = time.time()\n",
-    "print(e-s)"
+    "output_to_file(\n",
+    "    filename = 'clusters_single.txt',\n",
+    "    model = model_single\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.00942683219909668\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s = time.time()\n",
-    "my_cos_2 = np.zeros(shape=(term_coords_np.shape[0], term_coords_np.shape[0]))\n",
-    "for i in range(0, my_cos_2.shape[0]):\n",
-    "    for j in range(0, my_cos_2.shape[1]):\n",
-    "        vec_i = term_coords_np[i, :]\n",
-    "        vec_j = term_coords_np[j, :]\n",
-    "        \n",
-    "        inner_prod = abs(np.sum(vec_i * vec_j))\n",
-    "        norm_of_vec_i = math.sqrt(np.sum(vec_i * vec_i))\n",
-    "        norm_of_vec_j = math.sqrt(np.sum(vec_j * vec_j))\n",
-    "        \n",
-    "        cos_of_i_j = inner_prod / (norm_of_vec_i * norm_of_vec_j)\n",
-    "        \n",
-    "        my_cos_2[i, j] = cos_of_i_j\n",
-    "        \n",
-    "e = time.time()\n",
-    "print(e-s)"
+    "output_to_file(\n",
+    "    filename = 'clusters_complete.txt',\n",
+    "    model = model_complete\n",
+    ")"
    ]
   },
   {
@@ -383,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
