--- a/analysis_py.ipynb
+++ b/analysis_py.ipynb
@@ -172,16 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "normalization_factor = np.sum(doc_matrix, axis = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,16 +181,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 352,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6012,)"
+      ]
+     },
+     "execution_count": 352,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tf_idf = doc_matrix * idf / normalization_factor"
+    "idf.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 349,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf_idf = doc_matrix * idf "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nonzeros = np.count_nonzero(tf_idf, axis=1) != 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 390,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalization_factor = np.tile(np.sum(tf_idf[nonzeros, :], axis = 1), reps=[ doc_matrix.shape[1], 1 ]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 391,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf_idf[nonzeros, :] = tf_idf[nonzeros, :]/normalization_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 392,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.00106671, 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.0032015 , 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       ...,\n",
+       "       [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ]])"
+      ]
+     },
+     "execution_count": 392,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf_idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((73, 73), (73,), (73, 6012))"
+      ]
+     },
+     "execution_count": 436,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u, s, vh = np.linalg.svd(tf_idf, full_matrices=False)\n",
+    "u.shape, s.shape, vh.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -208,15 +299,12 @@
        "((73, 20), (20,), (20, 6012))"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "u, s, vh = np.linalg.svd(tf_idf, full_matrices=False)\n",
-    "u.shape, s.shape, vh.shape\n",
-    "\n",
     "truncate_factor = 20\n",
     "u = u[:, 0:truncate_factor]\n",
     "s = s[range(truncate_factor)]\n",
@@ -226,16 +314,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "25612.44969053936"
+       "0.4996914442851216"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 397,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,16 +334,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
+    "doc_coords = np.matmul(u, np.diag(s))\n",
     "term_coords = np.matmul(np.diag(s), vh).T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "articles = pd.read_csv('termdocmatrix/index_to_article.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,11 +362,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_clusters = 1000\n",
+    "n_clusters = 3\n",
     "\n",
     "clusterer_trainer_average = AgglomerativeClustering(\n",
     "    n_clusters = n_clusters,\n",
@@ -291,32 +389,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_average = clusterer_trainer_average.fit(term_coords)\n",
-    "model_single = clusterer_trainer_single.fit(term_coords)\n",
-    "model_complete = clusterer_trainer_complete.fit(term_coords)"
+    "model_average = clusterer_trainer_average.fit(doc_coords)\n",
+    "model_single = clusterer_trainer_single.fit(doc_coords)\n",
+    "model_complete = clusterer_trainer_complete.fit(doc_coords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 427,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0             4sum-problem-branch-and-bound-solution.md\n",
+       "1               a-layout-algorithm-for-equal-returns.md\n",
+       "2                        add-your-site-cache-control.md\n",
+       "3     association-rules-mining-and-apriori-algorithm.md\n",
+       "5                              aws-budget-bill-alert.md\n",
+       "                            ...                        \n",
+       "68                                symlink-vs-harlink.md\n",
+       "69                       talk-about-my-recent-doings.md\n",
+       "70    telling-static-file-accelerating-and-whole-sit...\n",
+       "71                           traceroute-introduction.md\n",
+       "72                                    vscode-linting.md\n",
+       "Name: article, Length: 71, dtype: object"
+      ]
+     },
+     "execution_count": 427,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
     "def words_cluster(n, model):\n",
     "    return terms.iloc[(double_words.iloc[:, 0])[model.labels_==n], :].iloc[:,1].to_numpy()\n",
     "\n",
+    "def docs_cluster(n, model):\n",
+    "    return articles.iloc[model.labels_ == n, 1]\n",
+    "\n",
     "def output_to_file(filename = None, model = None):\n",
     "    output_str = str()\n",
     "    for i in range(0, n_clusters):\n",
     "        output_str = output_str + 'n_cluster: ' + str(i) + '\\n\\n'\n",
     "\n",
-    "        words_in_this_cluster = words_cluster(i, model)\n",
+    "        words_in_this_cluster = docs_cluster(i, model)\n",
     "        for word in words_in_this_cluster:\n",
-    "            output_str = output_str + word + ', '\n",
+    "            output_str = output_str + word + '; \\n'\n",
     "\n",
     "        output_str = output_str + '\\n\\n'\n",
     "\n",
@@ -328,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
