--- a/cut_pkuseg.ipynb
+++ b/cut_pkuseg.ipynb
@@ -265,6 +265,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt(\n",
+    "    fname = 'termdocmatrix/doc_matrix.txt',\n",
+    "    X = np.array(doc_matrix).astype(int),\n",
+    "    delimiter = ',',\n",
+    "    newline = '\\n',\n",
+    "    fmt = '%u'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
