--- a/analysis_py.ipynb
+++ b/analysis_py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,31 +11,32 @@
     "import re\n",
     "import time\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.cluster import AgglomerativeClustering"
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "words = pd.read_csv('termdocmatrix/index_to_word.csv')"
+    "term_indexes = pd.read_csv('termdocmatrix/term_indexes.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "puncs_indexes = list()\n",
-    "for i in range(0, words.shape[0]):\n",
-    "    word = words.iloc[i, 1]\n",
-    "    if not (type(word) is str):\n",
-    "        puncs_indexes.append(i)\n",
-    "        continue\n",
+    "def no_punctuations_or_letters_or_digits_Q(word):\n",
     "    \n",
+    "    # if word is not str, then False\n",
+    "    if not (type(word) is str):\n",
+    "        return False\n",
+    "    \n",
+    "    # if word has digits, letters or punctuations\n",
     "    result = re.search(\n",
     "        '[' +\n",
     "        '\\u2000-\\u206F' +\n",
@@ -49,74 +50,210 @@
     "        '\\u0030-\\u0039' +\n",
     "        '\\u0040-\\u007F' +\n",
     "        ']',\n",
-    "        words.iloc[i, 1]\n",
+    "        word\n",
     "    )\n",
-    "        \n",
-    "    if not (result is None):\n",
-    "        puncs_indexes.append(i)"
+    "    \n",
+    "    if result is None:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def length_equal_or_greater_than_2_Q(word):\n",
+    "    return len(word) >= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_indexes = list(range(0, term_indexes.shape[0]))\n",
+    "\n",
+    "def pass_rule(x):\n",
+    "    \n",
+    "    if not no_punctuations_or_letters_or_digits_Q(x):\n",
+    "        return False\n",
+    "    \n",
+    "    if not length_equal_or_greater_than_2_Q(x):\n",
+    "        return False\n",
+    "    \n",
+    "    return True\n",
+    "    \n",
+    "selected_indexes = list(filter(\n",
+    "    lambda i: pass_rule(term_indexes.iloc[i, 0]),\n",
+    "    all_indexes\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>term</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>问题</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>分支</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>定界</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>求解</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>思路</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14906</th>\n",
+       "      <td>发向</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14915</th>\n",
+       "      <td>获知</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14955</th>\n",
+       "      <td>自制</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14973</th>\n",
+       "      <td>没有用</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14978</th>\n",
+       "      <td>后会</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5173 rows × 1 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "5202"
+       "      term\n",
+       "5       问题\n",
+       "7       分支\n",
+       "8       定界\n",
+       "9       求解\n",
+       "10      思路\n",
+       "...    ...\n",
+       "14906   发向\n",
+       "14915   获知\n",
+       "14955   自制\n",
+       "14973  没有用\n",
+       "14978   后会\n",
+       "\n",
+       "[5173 rows x 1 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(puncs_indexes)"
+    "term_indexes.iloc[selected_indexes, :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pure_word_indexes = list()\n",
-    "puncs_indexes_set = set(puncs_indexes)\n",
-    "for i in range(0, words.shape[0]):\n",
-    "    if not (i in puncs_indexes_set):\n",
-    "        pure_word_indexes.append(i)"
+    "words = pure_words.iloc[selected_indexes]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>term</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [term]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pure_words = words.iloc[pure_word_indexes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "double_word_indexes = list()\n",
-    "for i in range(0, pure_words.shape[0]):\n",
-    "    if len(pure_words.iloc[i, 1]) >= 2:\n",
-    "        double_word_indexes.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "words = pure_words.iloc[double_word_indexes]"
+    "words"
    ]
   },
   {
